crates/ddlog-syntax/tests/parse/fail/unclosed_block.dl
// kind:expr validate:false pass:false ignore:false
{{ 10 }
